# shazam-algorithm

./: Cargo.toml  README.md
back-end/: .env  package-lock.json  package.json  server.js
front-end/: package-lock.json
front-end/src/: App.css  App.jsx  Center.jsx  SongInfo.css  SongInfo.jsx  Switch.css  Switch.jsx  index.css
log/: database_inserts.txt  filtered_peaks_testing.txt
src/: audio_processing.rs  constants.rs  create_hash.rs  database_interaction.rs  lib.rs  make_spectr.rs  match_song.rs  process_spectr.rs
