[package]
name = "shazam"
version = "0.1.0"
edition = "2024"

[lib]
name = "shazam"
crate-type = ["cdylib"]

[dependencies]
hound = "3.4.0"
rubato = "0.14"
rustfft = "5.1.0"
plotters = "0.3.7"
bmp = "0.5.0"
ndarray = { version = "0.15", features = ["blas"] }
serde_json = "1.0"
mysql = "24.0.0"
napi = { version = "2.12.0", features = ["napi4"] }
napi-derive = "2.12.0"
log = "0.4"
env_logger = "0.9"

[build-dependencies]
napi-build = "2.0.1"